syntax = "proto3";

option java_multiple_files = true;
option java_package = "pe.com.hacom.oms.grpc";
option java_outer_classname = "OrderServiceProto";

package orders;

message OrderItem {
  string item_id = 1;
  int32 quantity = 2;
}

message OrderRequest {
  string order_id = 1;
  string customer_id = 2;
  string phone_number = 3;
  repeated OrderItem items = 4;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}

service OrderService {
  rpc InsertOrder(OrderRequest) returns (OrderResponse);
}
